@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<image>
+    <name>baseimage-lucid-mini</name>
+    <desc>Ubuntu Lucid</desc>
+
+    <memory>128</memory>
+
+    <size>500</size>
+
+    <install method="debootstrap">
+        <dist>lucid</dist>
+    </install>
+
+    <pre-install>
+        <script>write-lucid-sources.sh</script>
+    </pre-install>
+
+    <packages>
+        <package>openssh-server</package>
+    </packages>
+
+</image>
