@@ -1,0 +1,13 @@
+<suite>
+    <name>Sample Test Suite</name>
+    <desc>Contains a set of tests</desc>
+
+    <scenario>empty.xml</scenario>
+
+    <test type="host">
+        <name>Test1</name>
+        <desc>Searchs a string in Google</desc>
+
+        <dir>test1</dir>
+    </test>
+</suite>
