@@ -1,0 +1,34 @@
+#!/usr/bin/python
+
+from selenium import webdriver
+from selenium.webdriver.common.by import By
+from selenium.common.exceptions import NoSuchElementException
+import unittest, time, re
+
+class Risas(unittest.TestCase):
+    def setUp(self):
+        self.driver = webdriver.Firefox()
+        self.driver.implicitly_wait(30)
+        self.base_url = "http://www.google.es/"
+        self.verificationErrors = []
+
+    def test_risas(self):
+        driver = self.driver
+        driver.get(self.base_url)
+        search_field = driver.find_element_by_id("lst-ib")
+        search_field.click()
+        search_field.clear()
+        search_field.send_keys("foobar")
+        driver.find_element_by_name("btnG").click()
+
+    def is_element_present(self, how, what):
+        try: self.driver.find_element(by=how, value=what)
+        except NoSuchElementException, e: return False
+        return True
+
+    def tearDown(self):
+        self.driver.quit()
+        self.assertEqual([], self.verificationErrors)
+
+if __name__ == "__main__":
+    unittest.main()
